@startuml
class Transaction {
  Actions  []*TransactionAction
}

note right of Transaction : 来源于 \n Envelope.Data

class TransactionAction  {
    Header               []byte
    Payload              []byte
}

Transaction *-- TransactionAction

class ChaincodeActionPayload {
    ChaincodeProposalPayload []byte
    Actions *ChaincodeEndorsedAction
}

TransactionAction *-- ChaincodeActionPayload

class ChaincodeEndorsedAction {
    ProposalResponsePayload []byte
    Endorsements         []*Endorsement
}

ChaincodeActionPayload <--ChaincodeEndorsedAction

class ProposalResponsePayload {
   ProposalHash []byte
   Extension []byte
}
ChaincodeEndorsedAction <--ProposalResponsePayload


class ChaincodeAction {
	Results []byte
	Events []byte
	Response *Response
	ChaincodeId *ChaincodeID
	TokenExpectation     *token.TokenExpectation
}
ProposalResponsePayload <--ChaincodeAction : extension

note top of ChaincodeAction : Result 就是 rwset

class Endorsement {
	Endorser []byte
	Signature  []byte
}

ChaincodeEndorsedAction <-- Endorsement
@enduml